# fs-db

./: CLAUDE.md  Cargo.toml  README.md  package.toml
src/: connection.rs  engine.rs  entity.rs  filter.rs  lib.rs  manager.rs  migration.rs  record.rs  records.rs  repo.rs  repository.rs  write_buffer.rs
src/entities/: audit_log.rs  host.rs  installed_package.rs  mod.rs  module.rs  permission.rs  plugin.rs  project.rs  resource.rs  service_registry.rs  sync_state.rs
tests/: filter_test.rs  record_test.rs  repository_test.rs
