[package]
name        = "fs-db"
description = "SeaORM-based database abstraction for FreeSynergy (sqlite, postgres)"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-db"

[features]
default  = ["sqlite"]
sqlite   = ["sea-orm/sqlx-sqlite",  "sea-orm/runtime-tokio-rustls"]
postgres = ["sea-orm/sqlx-postgres", "sea-orm/runtime-tokio-rustls"]

[dependencies]
fs-error    = { path = "../fs-libs/fs-error" }
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
sea-orm     = { version = "=2.0.0-rc.37", default-features = false, features = ["macros"] }
